# youtube-audio-downloader

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: converter.cpp  converter.h
src/downloader/: downloader.cpp  downloader.h
src/transcriber/: transcriber.cpp  transcriber.h  whisper_wrapper.h
src/utils/: file_handler.cpp  file_handler.h  url_parser.cpp  url_parser.h
